feat: add translations

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -70,4 +70,10 @@
     "no_results_html": "No results found for {{ terms }}",
     "results_for_html": "{{ count }} results found for {{ terms }}"
   },
+  "main-product-section":{
+    "bage":{
+      "high_rating": "Highly Rated"
+    },
+    "title": "Highly Rated"
+  }
 }
