feat: color-picker

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -74,6 +74,9 @@
     "bage":{
       "high_rating": "Highly Rated"
     },
-    "title": "Highly Rated"
+    "price": {
+      "sold_out": "Sold out",
+      "on_sale": "On Sale"
+    }
   }
 }
