fix: color-picker add one color text

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -77,6 +77,12 @@
     "price": {
       "sold_out": "Sold out",
       "on_sale": "On Sale"
+    },
+    "color-picker": {
+      "one_color": "ONE COLOR"
+    },
+    "size-option": {
+      "one_size": "ONE SIZE"
     }
   }
 }
