--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -137,6 +137,9 @@
         },
         "color-picker": {
           "name": "Product colors",
+        },
+        "size-option": {
+          "name": "Size",
         }
       }
     }
