feat: updated product-form

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -23,6 +23,10 @@
     "remove": "Remove",
     "open_cart": "Open cart"
   },
+  "cart_button": {
+    "sold_out": "Sold out",
+    "add_to_cart": "Add to cart",
+  },
   "customers": {
     "login": {
       "email": "Email",
