--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -140,6 +140,9 @@
         },
         "size-option": {
           "name": "Size",
+        },
+        "buy_button": {
+          "name": "Buy button",
         }
       }
     }
