feat:add checkout_details

--- a/locales/en.default.schema.json
+++ b/locales/en.default.schema.json
@@ -143,6 +143,36 @@
         },
         "buy_button": {
           "name": "Buy button",
+        },
+        "checkout_details": {
+          "name": "Checkout details",
+          "settings": {
+            "iconShipping": {
+              "label": "Shipping Icon"
+            },
+            "shipping": {
+              "default": "Free U.S. Shipping Over $150",
+              "label": "Free Shipping"
+            },
+            "iconCheckout": {
+              "label": "Checkout Icon"
+            },
+            "checkout": {
+              "default": "Safe & Secure Checkout",
+              "label": "Checkout"
+            },
+            "iconAfterpay": {
+              "label": "Afterpay Icon"
+            },
+            "afterpay": {
+              "default": "Afterpay available at checkout",
+              "label": "Afterpay"
+            },
+            "description": {
+              "default": "Let your attitude have the edge in your Nike Air Max Plus, a Tuned Air experience that offers premium stability and unbelievable cushioning",
+              "label": "Decription"
+            }
+          }
         }
       }
     }
