--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -5,7 +5,8 @@
     "back_to_shopping": "Back to shopping"
   },
   "accessibility":{
-    "close_dialog": "Close size guide"
+    "close_dialog": "Close size guide",
+    "view_product": "View product"
   },
   "blog": {
     "article_comments": "Comments",
