feat: upd review section

--- a/locales/en.default.json
+++ b/locales/en.default.json
@@ -71,6 +71,10 @@
     "password": "Password",
     "enter": "Enter"
   },
+  "reviews": {
+    "no_reviews": "There is no reviews on this product...",
+    "avatar": "avatar"
+  },
   "search": {
     "title": "Search",
     "placeholder": "Search articles, pages, or products",
